--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -19,3 +19,97 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/IoffeS15},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@article{SNG,
+year={2005},
+issn={1370-4621},
+journal={Neural Processing Letters},
+volume={21},
+number={1},
+doi={10.1007/s11063-004-3255-2},
+title={Supervised Neural Gas with General Similarity Measure},
+url={http://dx.doi.org/10.1007/s11063-004-3255-2},
+publisher={Kluwer Academic Publishers},
+keywords={generalized relevance LVQ; learning vector quantization; metric adaptation; neural gas},
+author={Hammer, Barbara and Strickert, Marc and Villmann, Thomas},
+pages={21-44},
+language={English}
+}
+@article{schneider2009adaptive,
+  title={Adaptive relevance matrices in learning vector quantization},
+  author={Schneider, Petra and Biehl, Michael and Hammer, Barbara},
+  journal={Neural Computation},
+  volume={21},
+  number={12},
+  pages={3532--3561},
+  year={2009},
+  publisher={MIT Press}
+}
+@article{bunte2012limited,
+  title={Limited rank matrix learning, discriminative dimension reduction and visualization},
+  author={Bunte, Kerstin and Schneider, Petra and Hammer, Barbara and Schleif, Frank-Michael and Villmann, Thomas and Biehl, Michael},
+  journal={Neural Networks},
+  volume={26},
+  pages={159--173},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{de2013stationarity,
+  title={Stationarity and uniqueness of Generalized Matrix Learning Vector Quantization},
+  author={de Vries, Harm},
+  journal={MIWOCI Workshop-2013},
+  pages={16},
+  year={2013}
+}
+@article{DBLP:journals/corr/NguyenYC14,
+  author    = {Anh Mai Nguyen and
+               Jason Yosinski and
+               Jeff Clune},
+  title     = {Deep Neural Networks are Easily Fooled: High Confidence Predictions
+               for Unrecognizable Images},
+  journal   = {CoRR},
+  volume    = {abs/1412.1897},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.1897},
+  timestamp = {Thu, 09 Jul 2015 07:56:38 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/NguyenYC14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@article{DBLP:journals/corr/abs-1206-5538,
+  author    = {Yoshua Bengio and
+               Aaron C. Courville and
+               Pascal Vincent},
+  title     = {Unsupervised Feature Learning and Deep Learning: {A} Review and New
+               Perspectives},
+  journal   = {CoRR},
+  volume    = {abs/1206.5538},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1206.5538},
+  timestamp = {Wed, 10 Oct 2012 21:28:53 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1206-5538},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
+@article{DBLP:journals/corr/SzegedyZSBEGF13,
+  author    = {Christian Szegedy and
+               Wojciech Zaremba and
+               Ilya Sutskever and
+               Joan Bruna and
+               Dumitru Erhan and
+               Ian J. Goodfellow and
+               Rob Fergus},
+  title     = {Intriguing properties of neural networks},
+  journal   = {CoRR},
+  volume    = {abs/1312.6199},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.6199},
+  timestamp = {Mon, 06 Jan 2014 15:10:41 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyZSBEGF13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
